domain cropping corrected
domain cropping corrected

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -342,3 +342,7 @@ input[type="checkbox"]:checked + label:after {
   opacity: 1;
   margin-right: 90px;
 }
+#ddd
+{
+  margin-left: 10vw;
+}
